@startuml recipes_class_diagram
!theme plain
scale max 4096 width
skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #DAE8FC
skinparam classBorderColor #6C8EBF
skinparam classHeaderBackgroundColor #C5D8F0
skinparam classFontStyle bold
skinparam classFontSize 9
skinparam arrowColor #555555
skinparam arrowFontSize 8
skinparam packageBackgroundColor #F5F5F5
skinparam packageBorderColor #999999
skinparam packageFontStyle bold
skinparam packageFontSize 10
skinparam nodesep 25
skinparam ranksep 35

title Recipes Feature — Class Diagram

' ─────────────────────────────────────────────
' DOMAIN ENTITIES
' ─────────────────────────────────────────────
package "Domain" #EDF5E1 {
  class RecipeEntity {
    + id : int
    + title : String
    + image : String?
    + readyInMinutes : int?
    + servings : int?
    + summary : String?
    + instructions : String?
    + sourceUrl : String?
    + extendedIngredients : List<IngredientEntity>
    + analyzedInstructions : List<String>
    + isFavorite : bool
  }

  class RecipePreviewEntity {
    + id : int
    + title : String
    + image : String?
    + isFavorite : bool
  }

  class IngredientEntity {
    + id : int?
    + name : String?
    + amount : double?
    + unit : String?
    + original : String?
    + image : String?
  }

  RecipeEntity --> IngredientEntity : contains
}

' ─────────────────────────────────────────────
' DATA LAYER — Remote DTOs (Details)
' ─────────────────────────────────────────────
package "Data / Remote DTOs — Details" #FFF2CC {
  class RecipeDetailDto {
    + id : int?
    + title : String?
    + image : String?
    + readyInMinutes : int?
    + servings : int?
    + sourceUrl : String?
    + summary : String?
    + instructions : String?
    + extendedIngredients : List<ExtendedIngredientDto>?
    + analyzedInstructions : List<AnalyzedInstructionDto>?
    + fromJson() : RecipeDetailDto
  }

  class ExtendedIngredientDto {
    + id : int?
    + name : String?
    + amount : double?
    + unit : String?
    + original : String?
    + image : String?
    + fromJson() : ExtendedIngredientDto
  }

  class AnalyzedInstructionDto {
    + name : String?
    + steps : List<StepDto>?
    + fromJson() : AnalyzedInstructionDto
  }

  class StepDto {
    + number : int?
    + step : String?
    + fromJson() : StepDto
  }

  RecipeDetailDto --> ExtendedIngredientDto : contains
  RecipeDetailDto --> AnalyzedInstructionDto : contains
  AnalyzedInstructionDto --> StepDto : contains
}

' ─────────────────────────────────────────────
' DATA LAYER — Remote DTOs (Search)
' ─────────────────────────────────────────────
package "Data / Remote DTOs — Search" #FFE8CC {
  class RecipeSearchResponseDto {
    + results : List<RecipePreviewDto>?
    + offset : int?
    + number : int?
    + totalResults : int?
    + fromJson() : RecipeSearchResponseDto
  }

  class RecipePreviewDto {
    + id : int?
    + title : String?
    + image : String?
    + imageType : String?
    + fromJson() : RecipePreviewDto
  }

  class RecipeByIngredientDto {
    + id : int?
    + title : String?
    + image : String?
    + imageType : String?
    + usedIngredientCount : int?
    + missedIngredientCount : int?
    + missedIngredients : List<IngredientSimpleDto>?
    + usedIngredients : List<IngredientSimpleDto>?
    + unusedIngredients : List<IngredientSimpleDto>?
    + likes : int?
    + fromJson() : RecipeByIngredientDto
  }

  class IngredientSimpleDto {
    + id : int?
    + amount : double?
    + unit : String?
    + name : String?
    + original : String?
    + image : String?
    + fromJson() : IngredientSimpleDto
  }

  RecipeSearchResponseDto --> RecipePreviewDto : contains
  RecipeByIngredientDto --> IngredientSimpleDto : contains
}

' ─────────────────────────────────────────────
' DATA LAYER — Remote Data Source
' ─────────────────────────────────────────────
package "Data / Remote" #FFEEDD {
  interface RecipeRemoteDataSource {
    + searchRecipes(query) : Future<RecipeSearchResponseDto>
    + findByIngredients(ingredients) : Future<List<RecipeByIngredientDto>>
    + getRecipeDetails(id) : Future<RecipeDetailDto>
  }

  class RecipeRemoteDataSourceImpl {
    - _recipeApi : RecipeApi
  }

  RecipeRemoteDataSourceImpl ..|> RecipeRemoteDataSource
  RecipeRemoteDataSourceImpl ..> RecipeSearchResponseDto : uses
  RecipeRemoteDataSourceImpl ..> RecipeByIngredientDto : uses
  RecipeRemoteDataSourceImpl ..> RecipeDetailDto : uses
}

' ─────────────────────────────────────────────
' DATA LAYER — Local DB Table
' ─────────────────────────────────────────────
package "Data / Local" #FFE6CC {
  class FavoriteRecipes {
    + id : IntColumn (PK)
    + title : TextColumn
    + image : TextColumn?
    + readyInMinutes : IntColumn?
    + servings : IntColumn?
    + summary : TextColumn?
    + instructions : TextColumn?
    + sourceUrl : TextColumn?
    + extendedIngredientsJson : TextColumn?
    + analyzedInstructionsJson : TextColumn?
  }

  interface RecipeLocalDataSource {
    + getFavoriteRecipesFromDb() : Future<List<RecipeEntity>>
    + getFavoriteRecipeFromDb(id) : Future<RecipeEntity?>
    + isRecipeFavoriteInDb(id) : Future<bool>
    + saveFavoriteRecipeToDb(recipe) : Future<void>
    + deleteFavoriteRecipeFromDb(id) : Future<void>
  }

  class RecipeLocalDataSourceImpl {
    - _database : AppDatabase
  }

  FavoriteRecipes --|> Table
  RecipeLocalDataSourceImpl ..|> RecipeLocalDataSource
  RecipeLocalDataSourceImpl ..> FavoriteRecipes : reads/writes
}

' ─────────────────────────────────────────────
' DATA LAYER — Mapper & Repository
' ─────────────────────────────────────────────
package "Data / Repository" #F0E6FF {
  class RecipeMapper {
    + {static} mapRemoteSearchToPreviewList(dto) : List<RecipePreviewEntity>
    + {static} mapRemoteByIngredientsToPreviewList(list) : List<RecipePreviewEntity>
    + {static} mapEntityToPreview(entity) : RecipePreviewEntity
    + {static} mapRemoteDetailToEntity(dto) : RecipeEntity
    + {static} mapEntityToDbCompanion(entity) : FavoriteRecipesCompanion
    + {static} mapDbDataToEntity(row) : RecipeEntity
    - {static} _mapExtendedIngredientToEntity(dto) : IngredientEntity
    - {static} _mapAnalyzedInstructionsToSteps(list) : List<String>
  }

  interface RecipeRepository {
    + searchRecipesByName(query) : Future<List<RecipePreviewEntity>>
    + findRecipesByMyInventory() : Future<List<RecipePreviewEntity>>
    + getRecipeDetails(recipeId) : Future<RecipeEntity>
    + getFavoriteRecipes() : Future<List<RecipePreviewEntity>>
    + toggleFavoriteRecipe(recipe) : Future<void>
    + isRecipeFavorite(recipeId) : Stream<bool>
  }

  class RecipeRepositoryImpl {
    - _remoteDataSource : RecipeRemoteDataSource
    - _localDataSource : RecipeLocalDataSource
    - _inventoryRepository : InventoryRepository
    - _enrichWithFavoriteStatus(list) : Future<List<RecipePreviewEntity>>
  }

  RecipeRepositoryImpl ..|> RecipeRepository
  RecipeRepositoryImpl --> RecipeRemoteDataSource : uses
  RecipeRepositoryImpl --> RecipeLocalDataSource : uses
  RecipeRepositoryImpl ..> RecipeMapper : uses
  RecipeMapper ..> RecipeEntity : creates
  RecipeMapper ..> RecipePreviewEntity : creates
  RecipeMapper ..> IngredientEntity : creates
}

' ─────────────────────────────────────────────
' PRESENTATION — Recipes List State & Cubit
' ─────────────────────────────────────────────
package "Presentation / Recipes List" #E8F4FD {
  enum RecipesFilter {
    fromMyIngredients
    favorites
  }

  abstract class RecipesState {
  }

  class RecipesInitial {
  }
  class RecipesLoading {
  }
  class RecipesLoaded {
    + recipes : List<RecipePreviewEntity>
    + allRecipes : List<RecipePreviewEntity>
    + filter : RecipesFilter
    + copyWith() : RecipesLoaded
  }
  class RecipesError {
    + message : String
  }

  RecipesState --|> Equatable
  RecipesInitial --|> RecipesState
  RecipesLoading --|> RecipesState
  RecipesLoaded --|> RecipesState
  RecipesError --|> RecipesState
  RecipesLoaded --> RecipesFilter : uses

  class RecipesCubit {
    - _recipeRepository : RecipeRepository
    - _cachedFromInventoryRecipes : List<RecipePreviewEntity>
    + searchByName(query) : Future<void>
    + findFromMyInventory() : Future<void>
    + loadFavoriteRecipes() : Future<void>
    + toggleFavorite(recipeId) : Future<void>
    + setFilter(filter) : void
  }

  RecipesCubit --|> "Cubit<RecipesState>"
  RecipesCubit --> RecipeRepository : uses
  RecipesCubit ..> RecipesState : emits
}

' ─────────────────────────────────────────────
' PRESENTATION — Recipe Detail State & Cubit
' ─────────────────────────────────────────────
package "Presentation / Recipe Detail" #D5EAF5 {
  abstract class RecipeDetailState {
  }

  class RecipeDetailInitial {
  }
  class RecipeDetailLoading {
  }
  class RecipeDetailLoaded {
    + recipe : RecipeEntity
    + isFavorite : bool
    + copyWith() : RecipeDetailLoaded
  }
  class RecipeDetailError {
    + message : String
  }

  RecipeDetailState --|> Equatable
  RecipeDetailInitial --|> RecipeDetailState
  RecipeDetailLoading --|> RecipeDetailState
  RecipeDetailLoaded --|> RecipeDetailState
  RecipeDetailError --|> RecipeDetailState

  class RecipeDetailCubit {
    - _recipeRepository : RecipeRepository
    - _recipeId : int
    - _favoriteSubscription : StreamSubscription<bool>?
    + loadRecipeDetails() : Future<void>
    + toggleFavorite() : Future<void>
    + close() : Future<void>
  }

  RecipeDetailCubit --|> "Cubit<RecipeDetailState>"
  RecipeDetailCubit --> RecipeRepository : uses
  RecipeDetailCubit ..> RecipeDetailState : emits
}

' ─────────────────────────────────────────────
' PRESENTATION — Screens
' ─────────────────────────────────────────────
package "Presentation / Screens" #F0F8E8 {
  class RecipesPage {
    <<StatefulWidget>>
    - _searchController : SearchController
  }

  class RecipeDetailsScreen {
    <<StatelessWidget>>
  }

  class _RecipeDetailsBody {
    + recipe : RecipeEntity
    + isFavorite : bool
  }

  class _RecipeImage {
  }

  class _Section {
    + title : String
  }

  class _MetaChip {
  }

  class _IngredientsList {
  }

  class _InstructionsList {
  }

  RecipesPage --> RecipesCubit : BlocConsumer
  RecipeDetailsScreen --> RecipeDetailCubit : BlocConsumer
  RecipeDetailsScreen --> _RecipeDetailsBody
  _RecipeDetailsBody --> _RecipeImage
  _RecipeDetailsBody --> _Section
  _RecipeDetailsBody --> _MetaChip
  _RecipeDetailsBody --> _IngredientsList
  _RecipeDetailsBody --> _InstructionsList
}

' ─────────────────────────────────────────────
' PRESENTATION — Widgets
' ─────────────────────────────────────────────
package "Presentation / Widgets" #F5F0FF {
  enum FavoriteIconVariant {
    outline
    filledPrimary
  }

  class FavoriteIcon {
    + variant : FavoriteIconVariant
    + color : Color
  }

  class RecipeCard {
    + title : String
    + meta : String
    + imageUrl : String
    + isFavorite : bool
    + onFavoriteTap : VoidCallback
    + onTap : VoidCallback
  }

  class CustomSearchBar {
    + searchController : SearchController
  }

  class FilterSelectorViewOnly {
    + selectedFilter : RecipesFilter
    + onChanged : ValueChanged<RecipesFilter>
  }

  class SectionTitle {
    + title : String
  }

  class FavoritesEmptyWidget {
  }

  class IconHolder {
    + icon : IconData
  }

  FavoriteIcon --> FavoriteIconVariant : uses
  RecipeCard --> FavoriteIcon : uses
  FilterSelectorViewOnly --> RecipesFilter : uses
  RecipesPage --> RecipeCard
  RecipesPage --> CustomSearchBar
  RecipesPage --> FilterSelectorViewOnly
  RecipesPage --> SectionTitle
  RecipesPage --> FavoritesEmptyWidget
}

@enduml
